--- a/projects/coordinators/executor-coordinator/pom.xml
+++ b/projects/coordinators/executor-coordinator/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <name>executor-coordinator</name>
+    
     <groupId>br.unb.cic.bionimbuz.coordinators</groupId>
     <artifactId>executor-coordinator</artifactId>
-    <name>executor-coordinator</name>
     <version>0.1</version>
 
     <parent>
@@ -16,23 +16,27 @@
     </parent>
 
     <properties>
-        <java.version>1.8</java.version>
+        <maven.test.skip>true</maven.test.skip>
+        <java.version>11</java.version>
+        <api-rest-executor.version>0.1</api-rest-executor.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+            <groupId>br.unb.cic.bionimbuz.coordinators</groupId>
+            <artifactId>api-rest-executor</artifactId>
+            <version>${api-rest-executor.version}</version>
+            <type>pom</type>
+        </dependency>        
+        <dependency>
+            <groupId>br.unb.cic.bionimbuz.coordinators</groupId>
+            <artifactId>api-rest-executor</artifactId>
+            <version>${api-rest-executor.version}</version>
+        </dependency>        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>br.unb.cic.bionimbuz.coordinators</groupId>
-            <artifactId>api-rest-executor</artifactId>
-            <version>0.1</version>
         </dependency>
     </dependencies>
 
