--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -145,7 +145,7 @@ db.default.pool.maxIdleTime=120
 # Specify the ddl generation pattern to use. Set to none to disable it 
 # (default to update in DEV mode, and none in PROD mode):
 #jpa.default.ddl=update
-jpa.default.ddl=none
+jpa.default.ddl=validate
 
 #
 # Debug SQL statements (logged using DEBUG level):
